refactored, filters working 100%(finally) name filter fixed, limit filter fixed, css overflow hidden deleted(scrollable tweet view

--- a/src/main/webapp/index.css
+++ b/src/main/webapp/index.css
@@ -1,10 +1,9 @@
 body {
     text-align: center;
-    height: 800px;
-    max-height: 800px; 
+    height: auto;
+    max-height: 100%;
     width: 100%;
     margin: 0px;
-    overflow: hidden;
     background: #e0dddd;    
 }
 
